# ckanext-view_counter

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/view_counter/: plugin.py
ckanext/view_counter/assets/: script.js  webassets.yml
ckanext/view_counter/tests/: test_plugin.py
